# MirageVulkan

./: .gitignore  .session_context.md  1200x2000  2300  50100  50102  50104  800x1340  AI_STATUS.md  AOA_INVESTIGATION_REPORT.md  CLAUDE.md  CMakeLists.txt  CURRENT_TRUTH.md  EVALUATION_REPORT.md  LINE_COUNT.md  MIGRATION_PLAN.md  PROJECT_STATE.md  README.md  REVIEW_GUI_COMM.md  REVIEW_VIDEO_VULKAN.md  VIDEO_PIPELINE_STATUS.md  _content.txt  _git_results.txt  analyze_kt.py  build_log.txt  build_log2.txt  build_result.txt  build_summary.txt  check_config.py  check_dupes.py  check_kt.py  check_layer3.py  check_screens.py  clean_output.txt  config.json  debug_c.py  debug_tail.txt  devices.json  diag_hpp.py  diff_audit.py  (+125 more)
.github/workflows/: ci.yml
android/: build.gradle.kts  build_debug.bat  gradle.properties  gradlew  gradlew.bat  mirage-release.apk.idsig  settings.gradle.kts  setup_media_projection.bat
android/MirageStreamer/: build_apk.bat  settings.gradle
android/accessory/: build.gradle.kts
android/app/: build.gradle.kts
android/capture/: build.gradle.kts
config/: mirage.cfg.example
docs/: AI_ARCHITECTURE.md  AI_ENGINE_EVALUATION.md  AOA_FLOW_REVIEW.md  ARCHITECTURE.md  CODE_AUDIT_FIX_LOOP_20260208.md  CODE_AUDIT_REPORT.md  CODE_FIX_REPORT_20260208.md  H264_MIRROR_TEST_GUIDE.md  ISSUES.md  REMAINING_TASKS.md  SETUP_GUIDE.md  SPLIT_PLAN.md  TCP_MIRROR_DIAGNOSIS.md  USB_VIDEO_TEST_GUIDE.md  VIDEO_PIPELINE_SPEC.md  VIDEO_PIPELINE_STATUS.md  aoa_usb_reset_procedure.md  device_first_setup.md  macro_editor_design.md  ops_runbook_aoa_adb.md  vulkan_compute_pipeline_design.md  x1_video_pipeline_design.md
driver_installer/: README.md  driver_backup.txt  install_aoa_driver.bat  install_aoa_driver.ps1
driver_installer/docs/: FINAL_IMPLEMENTATION_ROADMAP.md  FINAL_TEST_REPORT.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  QUICK_START_GUIDE.md  SIGNATURE_OPERATIONAL_GUIDE.md  UI_INTEGRATION_GUIDE.md
driver_installer/tools/: install_winusb.bat  zadig.ini
driver_installer/ui/: mirage_driver_installer_wizard.py
driver_installer/usb_driver/: usb_device.cat  (+1 more)
macro_editor/: api_hex.tmp  app.py  fix_tap_element.py  mirage_client.py  patch_html.py  patch_ocr.py  test_validate.py
scripts/: _debug_adb.py  _fix_adb_cmd.py  _fix_auto_setup.py  _fix_bridge_launch.py  _fix_bridge_log.py  _fix_bridge_nofrag.py  _fix_broadcast.py  _fix_compile.py  _fix_compile2.py  _fix_cpp.py  _fix_debug.py  _fix_density.py  _fix_dialog.py  _fix_exec_hidden.py  _fix_flags2.py  _fix_force_restart.py  _fix_getport.py  _fix_gui_log.py  _fix_gui_tcp.py  _fix_hpp.py  _fix_inc.py  _fix_mutex.py  _fix_package.py  _fix_pkill.py  _fix_port_mismatch.py  _fix_raw_h264.py  _fix_setup_lifetime.py  _fix_streamer.py  _fix_tcp_direct.py  _fix_tcp_receiver.py  _fix_vd_flags.py  _patch_port.py  _rewrite_setup.py  _test_regex.py  adb_stream_bridge.py  adb_video_capture.py  add_firewall_rule.bat  aoa_workflow.bat  auto_pair.py  auto_setup_devices.py  (+49 more)
setup/: config.json
shaders/: prefix_sum_horizontal.comp  prefix_sum_vertical.comp  pyramid_downsample.comp  rgba_to_gray.comp  template_match_ncc.comp  template_match_sat.comp  yuv_to_rgba.comp
src/: PATCH_NOTE.txt  adb_device_manager.cpp  adb_device_manager.hpp  adb_h264_receiver.hpp  adb_security.hpp  adb_stream_receiver.hpp  adb_touch_fallback.cpp  adb_touch_fallback.hpp  ai_engine.cpp  ai_engine.hpp  aoa_hid_touch.cpp  aoa_hid_touch.hpp  aoa_protocol.cpp  auto_setup.hpp  bandwidth_monitor.cpp  bandwidth_monitor.hpp  config_loader.hpp  device_registry.cpp  device_registry.hpp  device_transform.cpp  device_transform.hpp  event_bus.hpp  event_bus.hpp.bak  frame_analyzer.cpp  frame_analyzer.hpp  frame_dispatcher.hpp  frame_ring_buffer.cpp  frame_ring_buffer.hpp  gui_application.cpp  gui_application.hpp  gui_frame_capture_impl.cpp  gui_input.cpp  gui_render.cpp  gui_render_dialogs.cpp  gui_render_left_panel.cpp  gui_render_main_view.cpp  hybrid_command_sender.cpp  hybrid_command_sender.hpp  hybrid_receiver.cpp  hybrid_receiver.hpp  (+38 more)
templates/: manifest.json
tests/: test_action_mapper.cpp  test_adb_device_manager.cpp  test_adb_security.cpp  test_ai_e2e.cpp  test_ai_improvements_nqr.cpp  test_ai_jpeg_receiver.cpp  test_aoa_hid.cpp  test_bandwidth_monitor.cpp  test_config_loader.cpp  test_device_transform.cpp  test_e2e_decode.cpp  test_event_bus.cpp  test_frame_analyzer.cpp  test_frame_analyzer_unit.cpp  test_frame_dispatcher.cpp  test_gui_logic.cpp  test_h264_parser.cpp  test_hybrid_sender.cpp  test_mira_protocol.cpp  test_mirror_receiver.cpp  test_result.cpp  test_route_controller.cpp  test_rtt_bandwidth.cpp  test_template_capture.cpp  test_template_manifest.cpp  test_template_store.cpp  test_template_versioning.cpp  test_ui_finder_parse.cpp  test_usb_command.cpp  test_vid0_parser.cpp  test_vision_decision_engine.cpp  test_vulkan_video.cpp  test_winusb_checker.cpp
tools/: ai_receiver_dump.py  ai_receiver_once.py  append_macro_editor_coord_policy.py  apply_clear_init_patch.py  apply_frame_hash_probe.py  apply_swapchain_retry_patch.py  apply_swapchain_safe_recreate.py  dedup_config_loader_allDevices.py  device_profiles_to_devices_json.py  freeze_probe.ps1  generate_device_profiles.py  insert_ai_extras_screen_service.py  insert_macro_coord_impls.py  patch_capture_maxsize.py  patch_debug_output_name.py  patch_dispatcher_copy.py  patch_fps_callback_x1_force.py  patch_fps_force_x1.py  patch_fps_isx1_usb.py  patch_hevc_support_pc.py  patch_mirrorreceiver_hevc_detect.py  patch_mirrorreceiver_hevc_detect2.py  patch_mirrorreceiver_hevc_detect3.py  patch_move_x1_rotate_early.py  patch_rotate_fix_dims.py  patch_rotate_portrait.cpp.py  patch_tcp_only_main_by_name.py  patch_tcp_only_main_exact.py  patch_tcp_only_register_x1_first.py  patch_tcp_only_sort_x1.py  patch_texture_clear_fix.py  patch_unified_decoder_copy.py  patch_vktex_hash.py  patch_watchdog_force_x1_maxsize.py  patch_x1_always_rotate.py  patch_x1_force_rotate_by_id.py  patch_x1_main_and_actions.py  patch_x1_main_by_ip.py  patch_x1_maxsize_guiinit.py  patch_x1_rotate_and_input.py  (+6 more)
usb_driver/: usb_device.cat  usb_device.inf
(+273 files in other folders)
